--- a/ListenToHeart/src/main/res/layout/fragment_listen_bar.xml
+++ b/ListenToHeart/src/main/res/layout/fragment_listen_bar.xml
@@ -1,20 +1,26 @@
-<com.lib.ab.view.pullview.AbPullToRefreshView
-    xmlns:android="http://schemas.android.com/apk/res/android"
-    android:id="@+id/pull_refresh_view"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:background="@color/white"
-    android:orientation="vertical">
+    android:layout_height="match_parent">
 
-    <ListView
-        android:id="@+id/listview"
+    <com.listen.widget.PagerSlidingTabStrip
+        android:id="@+id/pagerSlidingTabStrip"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:cacheColorHint="@android:color/transparent"
-        android:divider="#70CDCDCD"
-        android:dividerHeight="0.5dp"
-        android:fadingEdge="none"
-        android:fastScrollEnabled="true"
-        android:listSelector="@drawable/list_item_selector"
-        android:scrollbars="none" />
-</com.lib.ab.view.pullview.AbPullToRefreshView>
+        android:layout_height="40dp"
+        app:pstsShouldExpand="true"
+        app:pstsUnderlineHeight="2dp"
+        app:pstsIndicatorHeight="2dp"
+        app:pstsIndicatorColor="@color/title_green_bg"
+        app:selectedTabTextColor="@color/title_green_bg"
+        app:pstsDividerColor="@android:color/transparent"
+        app:pstsTabBackground="@drawable/pagertab_bg"
+        android:background="@android:color/white"
+        />
+
+    <android.support.v4.view.ViewPager
+        android:id="@+id/viewPager"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/pagerSlidingTabStrip" />
+
+</RelativeLayout>
