添加“更多”、“详情”和“章节列表”页面-罗锋杰

--- a/DevResLib/res/layout/layout_title_bar.xml
+++ b/DevResLib/res/layout/layout_title_bar.xml
@@ -22,7 +22,7 @@
             android:layout_height="wrap_content"
             android:gravity="center_vertical"
             android:scaleType="centerInside"
-            android:src="@drawable/icon_back"/>
+            android:src="@drawable/ic_back_normal"/>
 
         <TextView
             android:id="@+id/title_bar_left_text"
